feat: readme작성 및 삭제 관련 에러 해결